# 42_wolf3d

./: 1  11  16x16map.map  CMakeLists.txt  Makefile  author  map  map.map  map.rce  test.cpp  test.h  wolf3d
header/: libft.h  wolf3d.h
incs/: libft.h  reader.h  wolf3d.h
libft/: ft_lstnelem.c
libs/libft/: CMakeLists.txt  Makefile  ft_arriter.c  ft_arrmap.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_remalloc.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  (+24 more)
srcs/: .drow.c.swp  drow.c  editor.c  error.c  event.c  fonts.c  game.c  game_menu.c  init_mlx.c  init_params.c  level.c  loops.c  main.c  map.c  map_reader.c  player.c  process_game.c  ray.c  reader.c  render.c  texture.c  utils.c  utils2.c  window.c
vseok/: Makefile  README.md
vseok/incs/: CMakeLists.txt  Makefile  map.map  wolf3d.h
vseok/incs/incs/: libft.h  wolf3d.h
vseok/incs/srcs/: view.c
vseok/srcs/: level.c  main.c  test.json
